# noisy-bnsp

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  ruff.toml  setup.py
noisy_bnsp/: __init__.py  bigamma.py  nsmodels.py  utils.py
noisy_bnsp/c/: c_func.c  c_func.pyx  c_lib.pxd  emp.c  emp.h  ns_cross_exp.c  ns_cross_exp.h  ns_cross_gamma.c  ns_cross_gamma.h
tutorial/: real_data_example.ipynb  tutorial.ipynb
